# rhythmrx

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
app/: main.py
app/static/: index.html
rhythmrx/: __init__.py  analysis.py  cli.py  data.py  model.py  phase.py  twin.py  validation.py
tests/: test_rhythmrx.py
