[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rhythmrx"
version = "0.1.0"
description = "Chronotherapy for diabetes: measure a patient's circadian phase and time their medication to it. Validated on real CGM data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Azra Bano" }]
keywords = ["chronotherapy", "circadian", "diabetes", "cgm", "precision-medicine", "digital-health"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
data = ["pandas>=1.5", "xlrd>=2.0", "openpyxl>=3.0"]

[project.scripts]
rhythmrx = "rhythmrx.cli:main"

[tool.setuptools]
packages = ["rhythmrx"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
